<resources>
    <string name="app_name">FollowMe</string>
    <string name="facebook_app_id" translatable="false">385406521858416</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb385406521858416</string>
    <string name="google_place_key" translatable="false">AIzaSyAmsFgR4TjydhlRTP05t0_Dre3ZA29BIqY</string>

    <string name="label_button_leader" translatable="false">Leader Mode</string>
    <string name="label_button_folTravelFraglower" translatable="false">Follower Mode</string>
    <string name="label_button_next">Next</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_request_route">Request Route</string>
    <string name="label_button_create">Create</string>

    <string name="text_wait_leader" translatable="false">Please wait for your leader to add you to group</string>
    <string name="text_stage_add_member" translatable="false">Add Member</string>
    <string name="text_stage_destination" translatable="false">Destination</string>
    <string name="text_stage_route" translatable="false">Route</string>
    <string name="text_stage_waypoints" translatable="false">Waypoints</string>
    <string name="text_stage_order_waypoints" translatable="false">Order Waypoints</string>
    <string name="text_stage_feedback" translatable="false">Feedback</string>

    <string name="hint_enter_member_id">Enter member ID</string>

    <string name="content_desc_qr_code">Scan with QR Code</string>
    <string name="content_desc_add_member">Add member button</string>

    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_pick_destination" translatable="false">PickDestination</string>

    <string name="error_message_346">Connection failed, please check your connection</string>
    <string name="error_message_347">Wrong request method</string>
    <string name="error_message_348">Result not found</string>
    <string name="error_message_349">WTF! Has many result, please check your database\'s structure</string>
    <string name="error_message_350">Query failed, please check your SQL command</string>
    <string name="error_message_351">Parameters should not be empty!</string>
    <string name="error_message_352">User %1$s not found, please check ID</string>
    <string name="error_message_4869">Error: 4869 "Shi-Ya-Ro-Ku"</string>

    <string name="waypoint_success">Add waypoint complete</string>
    <string name="waypoint_zero">You can continue without waypoints, Sure?</string>

    <string name="text_continue">Continue</string>
    <string name="text_undo" translatable="false">Undo</string>
    <string name="text_start_trip">Start Trip!</string>
    <string name="text_check_in_successful">Store check in place successfully.</string>

    <string name="message_finish_trip">Do you want to finish your trip?</string>
    <string name="text_ok">YES</string>
    <string name="text_cancel">NO</string>

    <string name="text_finish_trip_successful">Trip finished!</string>

    <string name="text_hint_feedback">Your Comment</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_button_skip">Skip</string>
    <string name="text_send_feedback_success">Send feedback successful\nThank you. ;)</string>
    <string name="text_send_feedback_fail">Something went wrong :(</string>

    <string name="alert_message_finish_trip">Are you sure you want to finish this trip?</string>
    <string name="alert_ok_finish_trip">Yes</string>
    <string name="alert_cancel_finish_trip">No</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
