<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:textColorHint="@android:color/white">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_member_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_member_id"
            android:inputType="number"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/button_qr_code"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_qr_code"
        android:src="@drawable/ic_qr_code_white_24dp" />

    <ImageButton
        android:id="@+id/button_add_member"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_add_member"
        android:src="@drawable/ic_add_white_24dp" />

</LinearLayout>