<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_bg_window"
              android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/stage_label_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stage_label_margin_top"
                android:background="@drawable/bg_stage_label"
                android:drawableLeft="@drawable/ic_feedback"
                android:drawablePadding="@dimen/stage_label_drawable_padding"
                android:drawableStart="@drawable/ic_feedback"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/stage_label_padding_y"
                android:paddingLeft="@dimen/stage_label_padding_x"
                android:paddingRight="@dimen/stage_label_padding_x"
                android:paddingTop="@dimen/stage_label_padding_y"
                android:text="@string/text_stage_feedback"
                android:textColor="@color/color_text_stage"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rect_field_feedback"
                android:gravity="top|start"
                android:hint="@string/text_hint_feedback"
                android:inputType="textMultiLine"
                android:lines="8"
                android:overScrollMode="always"
                android:padding="10dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/blue_grey"
                    android:text="@string/text_button_skip"
                    android:textColor="@color/black"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_submit_feedback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/deep_purple"
                    android:text="@string/text_button_submit"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>